# critters-rs

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  biome.json  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  bench.yml  rust-pr.yml  rust.yml
.moon/: workspace.yml
.zed/: settings.json
benches/: wikipedia.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/critters-rs/: Cargo.toml  moon.yml
crates/critters-rs/src/: lib.rs  main.rs
dev/bench/: data.js
examples/: advanced_config.rs  basic_usage.rs  rust_wikipedia.rs
src/: lib.rs  main.rs  utils.rs
src/html/: attributes.rs  filter.rs  iter.rs  mod.rs  node_data_ref.rs  parser.rs  select.rs  serializer.rs  style_calculation.rs  tests.rs  tree.rs
tests/: critters.rs  log.rs  style_calculation.rs
tests/snapshots/: critters__exclude_external_comprehensive_snapshot.snap  critters__preserves_template_contents.snap  critters__prevent_injection_via_media_attr.snap  critters__run_on_html_file.snap  critters__run_on_rust_wikipedia.snap  critters__should_keep_existing_link_tag_attributes.snap  critters__should_keep_existing_link_tag_attributes_in_noscript_link.snap  log__skip_invalid_path.snap
tests/src/subpath/: subpath-validation.html
