[package]
name = "critters-rs"
description = "Quickly inline your website's critical CSS."
version = "1.1.2"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/michaelhthomas/critters-rs"
repository = "https://github.com/michaelhthomas/critters-rs"
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "critters-rs"
required-features = ["cli"]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = { version = "0.11.5", optional = true }
fancy-regex = "0.13.0"
indicatif = { version = "0.17.8", features = ["rayon"], optional = true }
indicatif-log-bridge = { version = "0.2.3", optional = true }
itertools = "0.13.0"
michaelhthomas-kuchikiki = "0.8.2"
lightningcss = "1.0.0-alpha.59"
log = "0.4.22"
markup5ever = "0.12.1"
regex = "1.10.6"
serde = "1.0.210"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, optional = true, features = [
  "napi4",
  "anyhow",
  "serde-json",
] }
napi-derive = { version = "2.12.2", optional = true }
rayon = { version = "1.10.0", optional = true }
serde_json = { version = "1.0.128", optional = true }
ts-rs = { version = "10.0.0", optional = true }
walkdir = { version = "2.5.0", optional = true }
path-clean = "1.0.1"

[build-dependencies]
napi-build = "2.0.1"

[features]
default = []
directory = ["indicatif", "rayon", "walkdir"]
cli = ["env_logger", "indicatif-log-bridge", "directory"]
typegen = ["ts-rs"]
use-napi = ["napi", "napi-derive", "serde_json", "env_logger", "directory"]

[dev-dependencies]
insta = "1.41.1"
mock-logger = "0.1.3"
tempdir = "0.3.7"
test-log = "0.2.16"
