[package]
name = "cli"
description = "Quickly inline your website's critical CSS."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
critters-rs = { path = "../critters-rs" }
env_logger = "0.11.5"
indicatif = { version = "0.17.8", features = ["rayon"] }
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
rayon = "1.10.0"
walkdir = "2.5.0"
