[package]
name = "critters-rs"
description = "Quickly inline your website's critical CSS."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
fancy-regex = "0.13.0"
itertools = "0.13.0"
kuchikiki = "0.8.2"
lightningcss = "1.0.0-alpha.59"
log = "0.4.22"
markup5ever = "0.11.0"
regex = "1.10.6"
serde = "1.0.210"
tempdir = "0.3.7"
test-log = "0.2.16"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, optional = true, features = [
  "napi4",
  "anyhow",
  "serde-json",
] }
napi-derive = { version = "2.12.2", optional = true }
serde_json = { version = "1.0.128", optional = true }
ts-rs = { version = "10.0.0", optional = true }

[build-dependencies]
napi-build = "2.0.1"

[features]
default = []
typegen = ["ts-rs"]
use-napi = ["napi", "napi-derive", "serde_json"]
